EPMRPP-62780 - issues modals: align forms

--- a/app/src/pages/inside/stepPage/modals/linkIssueModal/linkIssueModal.scss
+++ b/app/src/pages/inside/stepPage/modals/linkIssueModal/linkIssueModal.scss
@@ -14,6 +14,10 @@
  * limitations under the License.
  */
 
+.form {
+  padding-left: 24px;
+}
+
 .add-issue-id-title {
   margin: 0;
   padding: 10px;
