--- a/app/src/pages/inside/stepPage/modals/postIssueModal/postIssueModal.scss
+++ b/app/src/pages/inside/stepPage/modals/postIssueModal/postIssueModal.scss
@@ -25,6 +25,7 @@
   box-sizing: border-box;
   &.dark-view {
     max-width: 600px;
+    padding: 0 24px;
   }
 }
 
